src/objects/Connected_App_Roles__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting defines the list of user roles that are available for each connected app: to be used on the Identity Community</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>App_Picture_Url__c</fullName>
        <label>App Picture Url</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Connected_App_Description__c</fullName>
        <label>Connected App Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Connected_App_Provisioning_Name__c</fullName>
        <label>Connected App Provisioning Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Connected_App__c</fullName>
        <label>Connected App SSO Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Default_User_Role__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Default user Role to be used on the portal. Role assigned by default to be stored in the Portal Service Access Object</description>
        <label>Default User Role</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PermissionSet_Provisioning__c</fullName>
        <label>PermissionSet Provisioning</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Permission_set_SSO__c</fullName>
        <label>PermissionSet SSO</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>isCommunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCommunity</label>
        <type>Checkbox</type>
    </fields>
    <label>Connected App Roles</label>
</CustomObject>